--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.4.0
   pdf: ^3.11.3
   printing: ^5.14.2
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
